testsuite/poke.pkl/units-diag-2.pk
/* { dg-do compile } */

fun foo = string: { return "foo"; }

unit x = foo; /* { dg-error "" } */
